env/Development/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-backend-deployment
  labels:
    app: capstone-backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capstone-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: capstone-backend
    spec:
      containers:
      - image: 085519708244.dkr.ecr.us-east-2.amazonaws.com/backend_service:v0.1.0
        imagePullPolicy: Always
        name: capstone-backend
        ports:
        - containerPort: 8080
          hostPort: 8080
          protocol: TCP
